# CMakeList.txt : CMake project for passwordChecker, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("passwordChecker")

# Add source to this project's executable.
add_executable (passwordChecker "passwordChecker.cpp" "passwordChecker.h")

# TODO: Add tests and install targets if needed.
